--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <section class="sedans">
-    <img src="/images/icon-sedans.svg" alt="sedans">
+    <img src="images/icon-sedans.svg" alt="sedans">
     <h2>
       Sedans
     </h2>
@@ -28,7 +28,7 @@
     <button class="btn">Learn More</button>
   </section>
   <section class="suvs">
-    <img src="/images/icon-suvs.svg" alt="suvs">
+    <img src="images/icon-suvs.svg" alt="suvs">
     <h2>
       SUVs
     </h2>
@@ -38,7 +38,7 @@
     <button class="btn">Learn More</button>
   </section>
   <section class="luxury">
-    <img src="/images/icon-luxury.svg" alt="luxury">
+    <img src="images/icon-luxury.svg" alt="luxury">
     <h2>
       Luxury
     </h2>
